--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Project: Rock Paper Scissors</title>
+    <script src="script.js" defer="defer"></script>
   </head>
   <body>
-    <script src="script.js"></script>
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
   </body>
 </html>
